syntax = "proto3";

package proto;

option java_package = "com.pinak.pub.model";
option java_outer_classname = "RunRequestProto";

message RunRequest {
   int64 clientId = 1;
}
