syntax = "proto3";

package proto;

option java_package = "com.pinak.pub.model";
option java_outer_classname = "RunResponseProto";

message RunResponse {
   string runId = 1;
}
