syntax = "proto3";

package proto;

option java_package = "com.pinak.pub.model";
option java_outer_classname = "SyncRequestProto";

message SyncRequest {
   int64 clientId = 1;
}
